Updated Python katas documentation.

--- a/python/katas/_modules/coderbyte/ab_check.html
+++ b/python/katas/_modules/coderbyte/ab_check.html
@@ -258,11 +258,11 @@
 <span class="k">def</span><span class="w"> </span><span class="nf">ab_check</span><span class="p">(</span><span class="n">string</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    This function returns &quot;true&quot; if there are three characters between the</span>
-<span class="sd">    haracters &#39;a&#39; and &#39;b&#39;, or &quot;false&quot; otherwise.</span>
+<span class="sd">    characters &#39;a&#39; and &#39;b&#39;, or &quot;false&quot; otherwise.</span>
 
 <span class="sd">    :param string: The input string</span>
 <span class="sd">    :return: &quot;true&quot; if there are three characters between &#39;a&#39; and &#39;b&#39;, &quot;false&quot;</span>
-<span class="sd">    otherwise</span>
+<span class="sd">        otherwise</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="n">start_index</span> <span class="o">=</span> <span class="mi">0</span>
     <span class="k">while</span> <span class="kc">True</span><span class="p">:</span>
