--- a/python/katas/_modules/coderbyte/counting_minutes.html
+++ b/python/katas/_modules/coderbyte/counting_minutes.html
@@ -259,10 +259,11 @@
 <a class="viewcode-back" href="../../coderbyte.html#coderbyte.counting_minutes.counting_minutes">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">counting_minutes</span><span class="p">(</span><span class="n">string</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">int</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function takes a string that represents two times and calculates the total number of</span>
-<span class="sd">    minutes between the two. For example, given the input string &quot;1:23am-1:08am&quot;, this function</span>
-<span class="sd">    will return 1425 (1:08am represents the next day). The times will be in a 12-hour clock format,</span>
-<span class="sd">    separated by a hyphen.</span>
+<span class="sd">    This function takes a string that represents two times and calculates the</span>
+<span class="sd">    total number of minutes between the two. For example, given the input</span>
+<span class="sd">    string &quot;1:23am-1:08am&quot;, this function will return 1425 (1:08am represents</span>
+<span class="sd">    the next day). The times will be in a 12-hour clock format, separated by a</span>
+<span class="sd">    hyphen.</span>
 
 <span class="sd">    :param string: The input string</span>
 <span class="sd">    :return: The number of minutes between the two times</span>
