--- a/python/katas/_modules/coderbyte/dash_insert.html
+++ b/python/katas/_modules/coderbyte/dash_insert.html
@@ -257,7 +257,8 @@
 <a class="viewcode-back" href="../../coderbyte.html#coderbyte.dash_insert.dash_insert">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">dash_insert</span><span class="p">(</span><span class="n">string</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function returns a string that has a dash inserted between all odd numbers.</span>
+<span class="sd">    This function returns a string that has a dash inserted between all odd</span>
+<span class="sd">    numbers.</span>
 
 <span class="sd">    :param string: The input string</span>
 <span class="sd">    :return: :attr:`string` but with dashes inserted between all odd numbers</span>
