--- a/python/katas/_modules/coderbyte/dash_insert_ii.html
+++ b/python/katas/_modules/coderbyte/dash_insert_ii.html
@@ -257,11 +257,13 @@
 <a class="viewcode-back" href="../../coderbyte.html#coderbyte.dash_insert_ii.dash_insert_ii">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">dash_insert_ii</span><span class="p">(</span><span class="n">num</span><span class="p">:</span> <span class="nb">int</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function inserts a dash between two odd numbers in :attr:`num` and an asterisk between</span>
-<span class="sd">    two even numbers. Zeroes are not counted as odd or even numbers.</span>
+<span class="sd">    This function inserts a dash between two odd numbers in :attr:`num` and an</span>
+<span class="sd">    asterisk between two even numbers. Zeroes are not counted as odd or even</span>
+<span class="sd">    numbers.</span>
 
 <span class="sd">    :param num: The input integer</span>
-<span class="sd">    :return: A string with dashes inserted between odd numbers and asterisks between even numbers</span>
+<span class="sd">    :return: A string with dashes inserted between odd numbers and asterisks</span>
+<span class="sd">        between even numbers</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="n">string</span> <span class="o">=</span> <span class="nb">str</span><span class="p">(</span><span class="n">num</span><span class="p">)</span>
     <span class="n">results</span> <span class="o">=</span> <span class="p">[</span><span class="n">string</span><span class="p">[</span><span class="mi">0</span><span class="p">]]</span>
