--- a/python/katas/_modules/coderbyte/distinct_characters.html
+++ b/python/katas/_modules/coderbyte/distinct_characters.html
@@ -257,11 +257,12 @@
 <a class="viewcode-back" href="../../coderbyte.html#coderbyte.distinct_characters.distinct_characters">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">distinct_characters</span><span class="p">(</span><span class="n">string</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function returns &quot;true&quot; if :attr:`string` contains at least 10 distinct characters,</span>
-<span class="sd">    otherwise returns &quot;false&quot;.</span>
+<span class="sd">    This function returns &quot;true&quot; if :attr:`string` contains at least ten</span>
+<span class="sd">    distinct characters, otherwise returns &quot;false&quot;.</span>
 
 <span class="sd">    :param string: The input string</span>
-<span class="sd">    :return: &quot;true&quot; if :attr:`string` contains at least 10 distinct characters, &quot;false&quot; otherwise</span>
+<span class="sd">    :return: &quot;true&quot; if :attr:`string` contains at least 10 distinct characters,</span>
+<span class="sd">        &quot;false&quot; otherwise</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">return</span> <span class="s2">&quot;true&quot;</span> <span class="k">if</span> <span class="nb">len</span><span class="p">(</span><span class="nb">set</span><span class="p">(</span><span class="n">string</span><span class="p">))</span> <span class="o">&gt;=</span> <span class="mi">10</span> <span class="k">else</span> <span class="s2">&quot;false&quot;</span></div>
 
