--- a/python/katas/_modules/coderbyte/formatted_division.html
+++ b/python/katas/_modules/coderbyte/formatted_division.html
@@ -257,13 +257,13 @@
 <a class="viewcode-back" href="../../coderbyte.html#coderbyte.formatted_division.formatted_division">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">formatted_division</span><span class="p">(</span><span class="n">numerator</span><span class="p">:</span> <span class="nb">int</span><span class="p">,</span> <span class="n">denominator</span><span class="p">:</span> <span class="nb">int</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function returns the result of a division as a string with properly formatted commas and</span>
-<span class="sd">    four significant digits after the decimal place</span>
+<span class="sd">    This function returns the result of a division as a string with properly</span>
+<span class="sd">    formatted commas and four significant digits after the decimal place</span>
 
 <span class="sd">    :param numerator: The input number</span>
 <span class="sd">    :param denominator: The input number</span>
-<span class="sd">    :return: A formatted result with properly formatted commas and four significant digits after the</span>
-<span class="sd">        decimal place</span>
+<span class="sd">    :return: A formatted result with properly formatted commas and four</span>
+<span class="sd">        significant digits after the decimal place</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">return</span> <span class="sa">f</span><span class="s2">&quot;</span><span class="si">{</span><span class="n">numerator</span><span class="w"> </span><span class="o">/</span><span class="w"> </span><span class="n">denominator</span><span class="si">:</span><span class="s2">,.4f</span><span class="si">}</span><span class="s2">&quot;</span></div>
 
