--- a/python/katas/_modules/coderbyte/kaprekars_constant.html
+++ b/python/katas/_modules/coderbyte/kaprekars_constant.html
@@ -257,11 +257,12 @@
 <a class="viewcode-back" href="../../coderbyte.html#coderbyte.kaprekars_constant.kaprekars_constant">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">kaprekars_constant</span><span class="p">(</span><span class="n">num</span><span class="p">:</span> <span class="nb">int</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">int</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function returns the number of iterations it took to find Kaprekar&#39;s Constant, which is</span>
-<span class="sd">    6174.</span>
+<span class="sd">    This function returns the number of iterations it took to find Kaprekar&#39;s</span>
+<span class="sd">    Constant, which is 6174.</span>
 
 <span class="sd">    :param num: The input integer</span>
-<span class="sd">    :return: The number of times it took to find Kaprekar&#39;s Constant given :attr:`num`</span>
+<span class="sd">    :return: The number of times it took to find Kaprekar&#39;s Constant given</span>
+<span class="sd">        :attr:`num`</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="n">count</span> <span class="o">=</span> <span class="mi">1</span>
     <span class="n">difference</span> <span class="o">=</span> <span class="n">num</span>
