--- a/python/katas/_modules/coderbyte/largest_four.html
+++ b/python/katas/_modules/coderbyte/largest_four.html
@@ -257,7 +257,8 @@
 <a class="viewcode-back" href="../../coderbyte.html#coderbyte.largest_four.largest_four">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">largest_four</span><span class="p">(</span><span class="n">int_arr</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">int</span><span class="p">])</span> <span class="o">-&gt;</span> <span class="nb">int</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function returns the sum of the four largest integers in :attr:`int_arr`.</span>
+<span class="sd">    This function returns the sum of the four largest integers in</span>
+<span class="sd">    :attr:`int_arr`.</span>
 
 <span class="sd">    :param int_arr: The input list of integers</span>
 <span class="sd">    :return: The sum of the four largest integers in :attr:`int_arr`</span>
