--- a/python/katas/_modules/coderbyte/longest_word.html
+++ b/python/katas/_modules/coderbyte/longest_word.html
@@ -259,8 +259,9 @@
 <a class="viewcode-back" href="../../coderbyte.html#coderbyte.longest_word.longest_word">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">longest_word</span><span class="p">(</span><span class="n">string</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function returns the longest word in :attr:`string`. If there are two or more words that</span>
-<span class="sd">    are the same length, the first word is returned. All punctuation will be ignored.</span>
+<span class="sd">    This function returns the longest word in :attr:`string`. If there are two</span>
+<span class="sd">    or more words that are the same length, the first word is returned. All</span>
+<span class="sd">    punctuation will be ignored.</span>
 
 <span class="sd">    :param string: The input string</span>
 <span class="sd">    :return: The longest word in :attr:`string`</span>
