--- a/python/katas/_modules/coderbyte/tree_constructor.html
+++ b/python/katas/_modules/coderbyte/tree_constructor.html
@@ -260,13 +260,15 @@
 <a class="viewcode-back" href="../../coderbyte.html#coderbyte.tree_constructor.tree_constructor">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">tree_constructor</span><span class="p">(</span><span class="n">str_arr</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">str</span><span class="p">])</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function takes a list of strings that will contain pairs of integers in the following</span>
-<span class="sd">    format: (integer_1, integer_2) where integer_1 represents a child node in a tree and integer_2</span>
-<span class="sd">    represents the parent node of integer_1.</span>
+<span class="sd">    This function takes a list of strings that will contain pairs of integers</span>
+<span class="sd">    in the following format: (integer_1, integer_2) where integer_1 represents</span>
+<span class="sd">    a child node in a tree and integer_2 represents the parent node of</span>
+<span class="sd">    integer_1.</span>
 
-<span class="sd">    This function returns &quot;true&quot; if a valid binary tree can be formed, or &quot;false&quot; otherwise. It is</span>
-<span class="sd">    assumed that all integers within the tree will be unique, which means that there can only be one</span>
-<span class="sd">    node in the tree with the given integer value.</span>
+<span class="sd">    This function returns &quot;true&quot; if a valid binary tree can be formed, or</span>
+<span class="sd">    &quot;false&quot; otherwise. It is assumed that all integers within the tree will be</span>
+<span class="sd">    unique, which means that there can only be one node in the tree with the</span>
+<span class="sd">    given integer value.</span>
 
 <span class="sd">    :param str_arr: The input list of strings representing nodes in a tree</span>
 <span class="sd">    :return: &quot;true&quot; if a valid binary tree can be formed, &quot;false&quot; otherwise</span>
