--- a/python/katas/_modules/codesignal/find_middle_element.html
+++ b/python/katas/_modules/codesignal/find_middle_element.html
@@ -277,9 +277,9 @@
 <a class="viewcode-back" href="../../codesignal.html#codesignal.find_middle_element.find_middle_element">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">find_middle_element</span><span class="p">(</span><span class="n">linked_list</span><span class="p">:</span> <span class="n">ListNode</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">int</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function finds the value of the middle node in :attr:`linked_list`. If the list has an even</span>
-<span class="sd">    number of nodes, then there will be two middle nodes. In this case, the value of the second</span>
-<span class="sd">    middle node will be returned.</span>
+<span class="sd">    This function finds the value of the middle node in :attr:`linked_list`. If</span>
+<span class="sd">    the list has an even number of nodes, then there will be two middle nodes.</span>
+<span class="sd">    In this case, the value of the second middle node will be returned.</span>
 
 <span class="sd">    :param linked_list: A singly-linked list</span>
 <span class="sd">    :return: The value of the node in the middle of the linked list</span>
