--- a/python/katas/_modules/codewars/baby_shark_lyrics_generator.html
+++ b/python/katas/_modules/codewars/baby_shark_lyrics_generator.html
@@ -260,7 +260,8 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.baby_shark_lyrics_generator.baby_shark_lyrics">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">baby_shark_lyrics</span><span class="p">():</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function generates the lyrics to the Baby Shark song in under 300 characters.</span>
+<span class="sd">    This function generates the lyrics to the Baby Shark song in under 300</span>
+<span class="sd">    characters.</span>
 
 <span class="sd">    :return: The lyrics to the Baby Shark song</span>
 <span class="sd">    &quot;&quot;&quot;</span>
