--- a/python/katas/_modules/codewars/basic_mathematical_operations.html
+++ b/python/katas/_modules/codewars/basic_mathematical_operations.html
@@ -257,15 +257,18 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.basic_mathematical_operations.basic_op">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">basic_op</span><span class="p">(</span><span class="n">operator</span><span class="p">:</span> <span class="nb">str</span><span class="p">,</span> <span class="n">value1</span><span class="p">,</span> <span class="n">value2</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function performs simple arithmetic operations (addition, subtraction, multiplication, or</span>
-<span class="sd">    division) and then returns the result. If :attr:`operator` is not &#39;+&#39;, &#39;-&#39;, &#39;*&#39;, or &#39;/&#39;, a</span>
-<span class="sd">    ValueError is raised. If :attr:`operator` is &#39;/&#39; and :attr:`value2` is zero, a ValueError is</span>
-<span class="sd">    raised (division by zero is not allowed).</span>
+<span class="sd">    This function performs simple arithmetic operations (addition, subtraction,</span>
+<span class="sd">    multiplication, or division) and then returns the result. If</span>
+<span class="sd">    :attr:`operator` is not &#39;+&#39;, &#39;-&#39;, &#39;*&#39;, or &#39;/&#39;, a ValueError is raised. If</span>
+<span class="sd">    :attr:`operator` is &#39;/&#39; and :attr:`value2` is zero, a ValueError is raised</span>
+<span class="sd">    (division by zero is not allowed).</span>
 
-<span class="sd">    :param operator: The input string, a character representing an arithmetic operation</span>
+<span class="sd">    :param operator: The input string, a character representing an arithmetic</span>
+<span class="sd">        operation</span>
 <span class="sd">    :param value1: The first number</span>
 <span class="sd">    :param value2: The second number</span>
-<span class="sd">    :return: The result of performing the arithmetic operation on :attr:`value1` and :attr:`value2`</span>
+<span class="sd">    :return: The result of performing the arithmetic operation on</span>
+<span class="sd">        :attr:`value1` and :attr:`value2`</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">if</span> <span class="n">operator</span> <span class="o">==</span> <span class="s2">&quot;+&quot;</span><span class="p">:</span>
         <span class="k">return</span> <span class="n">value1</span> <span class="o">+</span> <span class="n">value2</span>
