--- a/python/katas/_modules/codewars/fibonacci_fizzbuzz.html
+++ b/python/katas/_modules/codewars/fibonacci_fizzbuzz.html
@@ -257,14 +257,16 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.fibonacci_fizzbuzz.fibs_fizz_buzz">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">fibs_fizz_buzz</span><span class="p">(</span><span class="n">number</span><span class="p">:</span> <span class="nb">int</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">list</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function produces a list of numbers that represent the Fibonacci sequence. But all numbers</span>
-<span class="sd">    that are divisible by 3 are replaced with the string &#39;Fizz&#39;, all numbers that are divisible by 5</span>
-<span class="sd">    are replaced with the string &#39;Buzz&#39;, and all numbers that are divisible by both 3 and 5 are</span>
+<span class="sd">    This function produces a list of numbers that represent the Fibonacci</span>
+<span class="sd">    sequence. But all numbers that are divisible by 3 are replaced with the</span>
+<span class="sd">    string &#39;Fizz&#39;, all numbers that are divisible by 5 are replaced with the</span>
+<span class="sd">    string &#39;Buzz&#39;, and all numbers that are divisible by both 3 and 5 are</span>
 <span class="sd">    replaced with the string &#39;FizzBuzz&#39;.</span>
 
 <span class="sd">    :param number: The length of the list of Fibonacci numbers.</span>
-<span class="sd">    :return: A list representing the Fibonacci sequence but with numbers that are divisible by</span>
-<span class="sd">    either 3 or 5 replaced with strings (&quot;Fizz&quot;, &quot;Buzz&quot;, or &quot;FizzBuzz&quot;).</span>
+<span class="sd">    :return: A list representing the Fibonacci sequence but with numbers that</span>
+<span class="sd">        are divisible by either 3 or 5 replaced with strings (&quot;Fizz&quot;, &quot;Buzz&quot;,</span>
+<span class="sd">        or &quot;FizzBuzz&quot;).</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">if</span> <span class="n">number</span> <span class="o">==</span> <span class="mi">1</span><span class="p">:</span>
         <span class="k">return</span> <span class="p">[</span><span class="mi">1</span><span class="p">]</span>
