--- a/python/katas/_modules/codewars/strings_starts_with.html
+++ b/python/katas/_modules/codewars/strings_starts_with.html
@@ -257,8 +257,8 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.strings_starts_with.starts_with">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">starts_with</span><span class="p">(</span><span class="n">string</span><span class="p">:</span> <span class="nb">str</span><span class="p">,</span> <span class="n">prefix</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">bool</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function is similar to the startswith function in the string class. It will return True if</span>
-<span class="sd">    :attr:`string` starts with :attr:`prefix`.</span>
+<span class="sd">    This function is similar to the startswith function in the string class. It</span>
+<span class="sd">    will return True if :attr:`string` starts with :attr:`prefix`.</span>
 
 <span class="sd">    :param string: The input string</span>
 <span class="sd">    :param prefix: A series of characters, may be an empty string</span>
