--- a/python/katas/_modules/codewars/strings_swap_vowels_case.html
+++ b/python/katas/_modules/codewars/strings_swap_vowels_case.html
@@ -257,9 +257,9 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.strings_swap_vowels_case.swap_vowel_case">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">swap_vowel_case</span><span class="p">(</span><span class="n">string</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function swaps the case of all the vowels in :attr:`string`, i.e. a lowercase vowel will be</span>
-<span class="sd">    turned into uppercase, and vice versa. The consonants and non-alphabetic characters are left in</span>
-<span class="sd">    the string as is.</span>
+<span class="sd">    This function swaps the case of all the vowels in :attr:`string`, i.e. a</span>
+<span class="sd">    lowercase vowel will be turned into uppercase, and vice versa. The</span>
+<span class="sd">    consonants and non-alphabetic characters are left in the string as is.</span>
 
 <span class="sd">    :param string: The input string</span>
 <span class="sd">    :return: The same string</span>
