--- a/python/katas/_modules/codewars/tail_swap.html
+++ b/python/katas/_modules/codewars/tail_swap.html
@@ -257,10 +257,11 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.tail_swap.tail_swap">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">tail_swap</span><span class="p">(</span><span class="n">strings</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">str</span><span class="p">])</span> <span class="o">-&gt;</span> <span class="nb">list</span><span class="p">[</span><span class="nb">str</span><span class="p">]:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function swaps the substring that comes after a colon in the first string in the given list</span>
-<span class="sd">    of two strings with the substring that comes after a colon in the second string. There will</span>
-<span class="sd">    always be only one colon in each string, and it will never be at the beginning or end of both</span>
-<span class="sd">    strings, i.e. the substrings before and after the colon will at least have one character.</span>
+<span class="sd">    This function swaps the substring that comes after a colon in the first</span>
+<span class="sd">    string in the given list of two strings with the substring that comes after</span>
+<span class="sd">    a colon in the second string. There will always be only one colon in each</span>
+<span class="sd">    string, and it will never be at the beginning or end of both strings, i.e.</span>
+<span class="sd">    the substrings before and after the colon will at least have one character.</span>
 
 <span class="sd">    :param strings: The input list containing two strings</span>
 <span class="sd">    :return: A list containing two strings</span>
