--- a/python/katas/_modules/codewars/thinkful_list_drills_longest_word.html
+++ b/python/katas/_modules/codewars/thinkful_list_drills_longest_word.html
@@ -257,8 +257,8 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.thinkful_list_drills_longest_word.longest">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">longest</span><span class="p">(</span><span class="n">words</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">str</span><span class="p">])</span> <span class="o">-&gt;</span> <span class="nb">int</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function finds the longest word in the given list and returns the number of characters in</span>
-<span class="sd">    that word.</span>
+<span class="sd">    This function finds the longest word in the given list and returns the</span>
+<span class="sd">    number of characters in that word.</span>
 
 <span class="sd">    :param words: The input list of strings</span>
 <span class="sd">    :return: The number of characters in the longest word in :attr:`words`</span>
