--- a/python/katas/_modules/codewars/thinkful_logic_drills_traffic_light.html
+++ b/python/katas/_modules/codewars/thinkful_logic_drills_traffic_light.html
@@ -257,9 +257,10 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.thinkful_logic_drills_traffic_light.update_light">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">update_light</span><span class="p">(</span><span class="n">current</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function simulates a traffic signal. If the current light is &quot;green&quot;, then the light that</span>
-<span class="sd">    appears next, &quot;yellow&quot;, is returned. If the current light is &quot;yellow&quot;, then &quot;red&quot; is returned.</span>
-<span class="sd">    Finally, if the current light is &quot;red&quot;, then &quot;green&quot; is returned.</span>
+<span class="sd">    This function simulates a traffic signal. If the current light is &quot;green&quot;,</span>
+<span class="sd">    then the light that appears next, &quot;yellow&quot;, is returned. If the current</span>
+<span class="sd">    light is &quot;yellow&quot;, then &quot;red&quot; is returned. Finally, if the current light is</span>
+<span class="sd">    &quot;red&quot;, then &quot;green&quot; is returned.</span>
 
 <span class="sd">    :param current: The current light: &quot;red&quot;, &quot;yellow&quot;, or &quot;green&quot;</span>
 <span class="sd">    :return: The light that will appear next</span>
