--- a/python/katas/_modules/codewars/thinkful_number_drills_romer_temperature.html
+++ b/python/katas/_modules/codewars/thinkful_number_drills_romer_temperature.html
@@ -257,8 +257,8 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.thinkful_number_drills_romer_temperature.celsius_to_romer">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">celsius_to_romer</span><span class="p">(</span><span class="n">temp</span><span class="p">:</span> <span class="nb">float</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">float</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function converts the given temperature from Celsius to Rømer, which is no longer in use</span>
-<span class="sd">    today.</span>
+<span class="sd">    This function converts the given temperature from Celsius to Rømer, which</span>
+<span class="sd">    is no longer in use today.</span>
 
 <span class="sd">    :param temp: The input temperature in Celsius</span>
 <span class="sd">    :return: The temperature in the Rømer scale</span>
