--- a/python/katas/_modules/codewars/thinkful_object_drills_quarks.html
+++ b/python/katas/_modules/codewars/thinkful_object_drills_quarks.html
@@ -259,15 +259,16 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.thinkful_object_drills_quarks.Quark">[docs]</a>
 <span class="k">class</span><span class="w"> </span><span class="nc">Quark</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This class represents a quark, which is a type of elementary particle and a fundamental</span>
-<span class="sd">    constituent of matter.</span>
+<span class="sd">    This class represents a quark, which is a type of elementary particle and a</span>
+<span class="sd">    fundamental constituent of matter.</span>
 <span class="sd">    &quot;&quot;&quot;</span>
 
     <span class="k">def</span><span class="w"> </span><span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">color</span><span class="p">:</span> <span class="nb">str</span><span class="p">,</span> <span class="n">flavor</span><span class="p">:</span> <span class="nb">str</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">        Initializes this quark with the given color and flavor. Valid colors are red, blue, or</span>
-<span class="sd">        green, and valid flavors are up, down, strange, charm, top, and bottom. If an invalid value</span>
-<span class="sd">        is passed for either color or flavor, a ValueError is raised.</span>
+<span class="sd">        Initializes this quark with the given color and flavor. Valid colors</span>
+<span class="sd">        are red, blue, or green, and valid flavors are up, down, strange,</span>
+<span class="sd">        charm, top, and bottom. If an invalid value is passed for either color</span>
+<span class="sd">        or flavor, a ValueError is raised.</span>
 
 <span class="sd">        :param color: The color for this quark</span>
 <span class="sd">        :param flavor: The flavor or type of this quark</span>
@@ -284,8 +285,8 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.thinkful_object_drills_quarks.Quark.interact">[docs]</a>
     <span class="k">def</span><span class="w"> </span><span class="nf">interact</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">other_quark</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="kc">None</span><span class="p">:</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">        Switches the color of this quark with the other quark when both quarks interact with each</span>
-<span class="sd">        other.</span>
+<span class="sd">        Switches the color of this quark with the other quark when both quarks</span>
+<span class="sd">        interact with each other.</span>
 
 <span class="sd">        :param other_quark: The other quark</span>
 <span class="sd">        :return: None</span>
