--- a/python/katas/_modules/codewars/thinkful_object_drills_vectors.html
+++ b/python/katas/_modules/codewars/thinkful_object_drills_vectors.html
@@ -277,12 +277,12 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.thinkful_object_drills_vectors.Vector.add">[docs]</a>
     <span class="k">def</span><span class="w"> </span><span class="nf">add</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">other_vector</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">        Returns a new vector whose magnitude is the sum of the components of this vector and the</span>
-<span class="sd">        given vector.</span>
+<span class="sd">        Returns a new vector whose magnitude is the sum of the components of</span>
+<span class="sd">        this vector and the given vector.</span>
 
 <span class="sd">        :param other_vector: The other vector</span>
-<span class="sd">        :return: A new vector with a magnitude that is the sum of the components of this vector and</span>
-<span class="sd">            :attr:`other_vector`</span>
+<span class="sd">        :return: A new vector with a magnitude that is the sum of the</span>
+<span class="sd">            components of this vector and :attr:`other_vector`</span>
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="k">return</span> <span class="n">Vector</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">x</span> <span class="o">+</span> <span class="n">other_vector</span><span class="o">.</span><span class="n">x</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">y</span> <span class="o">+</span> <span class="n">other_vector</span><span class="o">.</span><span class="n">y</span><span class="p">)</span></div>
 
