--- a/python/katas/_modules/codewars/thinkful_string_drills_areacode_extractor.html
+++ b/python/katas/_modules/codewars/thinkful_string_drills_areacode_extractor.html
@@ -257,8 +257,9 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.thinkful_string_drills_areacode_extractor.area_code">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">area_code</span><span class="p">(</span><span class="n">text</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function returns the area code for a phone number that is found in the given string. The</span>
-<span class="sd">    area code is found between the open and close parentheses.</span>
+<span class="sd">    This function returns the area code for a phone number that is found in the</span>
+<span class="sd">    given string. The area code is found between the open and close</span>
+<span class="sd">    parentheses.</span>
 
 <span class="sd">    :param text: The input string</span>
 <span class="sd">    :return: The area code</span>
