--- a/python/katas/_modules/codewars/thinkful_string_drills_poem_formatter.html
+++ b/python/katas/_modules/codewars/thinkful_string_drills_poem_formatter.html
@@ -257,8 +257,9 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.thinkful_string_drills_poem_formatter.format_poem">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">format_poem</span><span class="p">(</span><span class="n">poem</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function returns a string in which every sentence in the given string is on its own line.</span>
-<span class="sd">    The string that is returned will not have any trailing whitespace characters.</span>
+<span class="sd">    This function returns a string in which every sentence in the given string</span>
+<span class="sd">    is on its own line. The string that is returned will not have any trailing</span>
+<span class="sd">    whitespace characters.</span>
 
 <span class="sd">    :param poem: The input string</span>
 <span class="sd">    :return: A string in which every sentence is on its own line.</span>
