--- a/python/katas/_modules/codewars/thinkful_string_drills_quotable.html
+++ b/python/katas/_modules/codewars/thinkful_string_drills_quotable.html
@@ -257,7 +257,8 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.thinkful_string_drills_quotable.quotable">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">quotable</span><span class="p">(</span><span class="n">name</span><span class="p">:</span> <span class="nb">str</span><span class="p">,</span> <span class="n">quote</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function returns a quote that the given person said using a formatted string.</span>
+<span class="sd">    This function returns a quote that the given person said using a formatted</span>
+<span class="sd">    string.</span>
 
 <span class="sd">    :param name: The name of the person who said :attr:`quote`</span>
 <span class="sd">    :param quote: The quote</span>
