--- a/python/katas/_modules/codewars/thinking_and_testing_a_and_b.html
+++ b/python/katas/_modules/codewars/thinking_and_testing_a_and_b.html
@@ -261,7 +261,8 @@
 
 <span class="sd">    :param value1: The input integer</span>
 <span class="sd">    :param value2: The input integer</span>
-<span class="sd">    :return: The result of the bitwise OR operation on both :attr:`value1` and :attr:`value2`</span>
+<span class="sd">    :return: The result of the bitwise OR operation on both :attr:`value1` and</span>
+<span class="sd">        :attr:`value2`</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">return</span> <span class="n">value1</span> <span class="o">|</span> <span class="n">value2</span></div>
 
