--- a/python/katas/_modules/codewars/thinking_and_testing_how_many_word.html
+++ b/python/katas/_modules/codewars/thinking_and_testing_how_many_word.html
@@ -257,9 +257,9 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.thinking_and_testing_how_many_word.how_many_word">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">how_many_word</span><span class="p">(</span><span class="n">string</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">int</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function counts all the number of times that &#39;word&#39; appears in the given string. The count</span>
-<span class="sd">    is case-insensitive, and all the characters between &#39;w&#39;, &#39;o&#39;, &#39;r&#39;, and &#39;d&#39; in the given string</span>
-<span class="sd">    are ignored.</span>
+<span class="sd">    This function counts all the number of times that &#39;word&#39; appears in the</span>
+<span class="sd">    given string. The count is case-insensitive, and all the characters between</span>
+<span class="sd">    &#39;w&#39;, &#39;o&#39;, &#39;r&#39;, and &#39;d&#39; in the given string are ignored.</span>
 
 <span class="sd">    :param string: The input string</span>
 <span class="sd">    :return: The number of times that &quot;word&quot; appears in :attr:`string`</span>
