--- a/python/katas/_modules/codewars/third_angle_of_a_triangle.html
+++ b/python/katas/_modules/codewars/third_angle_of_a_triangle.html
@@ -257,7 +257,8 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.third_angle_of_a_triangle.other_angle">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">other_angle</span><span class="p">(</span><span class="n">angle_1</span><span class="p">,</span> <span class="n">angle_2</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function calculates the third angle of a triangle given two known angles.</span>
+<span class="sd">    This function calculates the third angle of a triangle given two known</span>
+<span class="sd">    angles.</span>
 
 <span class="sd">    :param angle_1: The first angle</span>
 <span class="sd">    :param angle_2: The second angle</span>
