--- a/python/katas/_modules/codewars/title_case.html
+++ b/python/katas/_modules/codewars/title_case.html
@@ -257,14 +257,15 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.title_case.title_case">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">title_case</span><span class="p">(</span><span class="n">title</span><span class="p">:</span> <span class="nb">str</span><span class="p">,</span> <span class="n">minor_words</span><span class="p">:</span> <span class="nb">str</span> <span class="o">=</span> <span class="s2">&quot;&quot;</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function converts the given title into title case, that is, the first letter of each word</span>
-<span class="sd">    in :attr:`title` will be converted to uppercase and the rest of the word converted to lowercase.</span>
-<span class="sd">    If a word in :attr:`title` appears in :attr:`minor_words`, regardless of case, then that word</span>
-<span class="sd">    will be converted to all lowercase.</span>
+<span class="sd">    This function converts the given title into title case, that is, the first</span>
+<span class="sd">    letter of each word in :attr:`title` will be converted to uppercase and the</span>
+<span class="sd">    rest of the word converted to lowercase. If a word in :attr:`title` appears</span>
+<span class="sd">    in :attr:`minor_words`, regardless of case, then that word will be</span>
+<span class="sd">    converted to all lowercase.</span>
 
 <span class="sd">    :param title: The input string, the title to convert</span>
-<span class="sd">    :param minor_words: A space-delimited list of words to ignore in :attr:`title`, i.e. words to</span>
-<span class="sd">        make all lowercase</span>
+<span class="sd">    :param minor_words: A space-delimited list of words to ignore in</span>
+<span class="sd">        :attr:`title`, i.e. words to make all lowercase</span>
 <span class="sd">    :return: The title in title case</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">if</span> <span class="ow">not</span> <span class="n">title</span><span class="p">:</span>
