--- a/python/katas/_modules/leetcode/max_stack_716.html
+++ b/python/katas/_modules/leetcode/max_stack_716.html
@@ -257,9 +257,9 @@
 <a class="viewcode-back" href="../../leetcode.html#leetcode.max_stack_716.MaxStack">[docs]</a>
 <span class="k">class</span><span class="w"> </span><span class="nc">MaxStack</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This class represents a stack data structure that allows users to push integers onto the stack,</span>
-<span class="sd">    get or pop the integer that is at the top of the stack, and get or pop the largest integer that</span>
-<span class="sd">    is in the stack.</span>
+<span class="sd">    This class represents a stack data structure that allows users to push</span>
+<span class="sd">    integers onto the stack, get or pop the integer that is at the top of the</span>
+<span class="sd">    stack, and get or pop the largest integer that is in the stack.</span>
 <span class="sd">    &quot;&quot;&quot;</span>
 
     <span class="k">def</span><span class="w"> </span><span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
@@ -284,7 +284,8 @@
 <a class="viewcode-back" href="../../leetcode.html#leetcode.max_stack_716.MaxStack.pop">[docs]</a>
     <span class="k">def</span><span class="w"> </span><span class="nf">pop</span><span class="p">(</span><span class="bp">self</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">int</span><span class="p">:</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">        This method removes the integer that is at the top of the stack and returns it.</span>
+<span class="sd">        This method removes the integer that is at the top of the stack and</span>
+<span class="sd">        returns it.</span>
 
 <span class="sd">        :return: The integer that was on top of the stack</span>
 <span class="sd">        &quot;&quot;&quot;</span>
@@ -295,8 +296,8 @@
 <a class="viewcode-back" href="../../leetcode.html#leetcode.max_stack_716.MaxStack.top">[docs]</a>
     <span class="k">def</span><span class="w"> </span><span class="nf">top</span><span class="p">(</span><span class="bp">self</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">int</span><span class="p">:</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">        This method returns the integer that is at the top of the stack without removing it from the</span>
-<span class="sd">        stack.</span>
+<span class="sd">        This method returns the integer that is at the top of the stack without</span>
+<span class="sd">        removing it from the stack.</span>
 
 <span class="sd">        :return: The integer that is on top of the stack</span>
 <span class="sd">        &quot;&quot;&quot;</span>
@@ -307,8 +308,8 @@
 <a class="viewcode-back" href="../../leetcode.html#leetcode.max_stack_716.MaxStack.peek_max">[docs]</a>
     <span class="k">def</span><span class="w"> </span><span class="nf">peek_max</span><span class="p">(</span><span class="bp">self</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">int</span><span class="p">:</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">        This method returns the largest integer that is in the stack. The largest integer is not</span>
-<span class="sd">        removed from the stack.</span>
+<span class="sd">        This method returns the largest integer that is in the stack. The</span>
+<span class="sd">        largest integer is not removed from the stack.</span>
 
 <span class="sd">        :return: The largest integer in the stack</span>
 <span class="sd">        &quot;&quot;&quot;</span>
@@ -319,9 +320,10 @@
 <a class="viewcode-back" href="../../leetcode.html#leetcode.max_stack_716.MaxStack.pop_max">[docs]</a>
     <span class="k">def</span><span class="w"> </span><span class="nf">pop_max</span><span class="p">(</span><span class="bp">self</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">int</span><span class="p">:</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">        This method removes the largest integer from the stack and returns it. If there are two or</span>
-<span class="sd">        more integers that are the largest in the stack, the rightmost integer is removed and</span>
-<span class="sd">        returned, i.e. the most recent integer that was pushed onto the stack.</span>
+<span class="sd">        This method removes the largest integer from the stack and returns it.</span>
+<span class="sd">        If there are two or more integers that are the largest in the stack,</span>
+<span class="sd">        the rightmost integer is removed and returned, i.e. the most recent</span>
+<span class="sd">        integer that was pushed onto the stack.</span>
 
 <span class="sd">        :return: The largest integer in the stack</span>
 <span class="sd">        &quot;&quot;&quot;</span>
