--- a/python/katas/_modules/leetcode/median_of_two_sorted_arrays_4.html
+++ b/python/katas/_modules/leetcode/median_of_two_sorted_arrays_4.html
@@ -257,9 +257,9 @@
 <a class="viewcode-back" href="../../leetcode.html#leetcode.median_of_two_sorted_arrays_4.find_middle">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">find_middle</span><span class="p">(</span><span class="n">nums</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">int</span><span class="p">])</span> <span class="o">-&gt;</span> <span class="nb">float</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This helper function finds the median of the given list of integers. If the list contains an</span>
-<span class="sd">    even number of integers, the middle two elements are summed together and then the sum is divided</span>
-<span class="sd">    by two.</span>
+<span class="sd">    This helper function finds the median of the given list of integers. If the</span>
+<span class="sd">    list contains an even number of integers, the middle two elements are</span>
+<span class="sd">    summed together and then the sum is divided by two.</span>
 
 <span class="sd">    :param nums: The list of integers</span>
 <span class="sd">    :return: The median of the list</span>
@@ -275,8 +275,8 @@
 <a class="viewcode-back" href="../../leetcode.html#leetcode.median_of_two_sorted_arrays_4.find_median_sorted_arrays">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">find_median_sorted_arrays</span><span class="p">(</span><span class="n">nums1</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">int</span><span class="p">],</span> <span class="n">nums2</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">int</span><span class="p">])</span> <span class="o">-&gt;</span> <span class="nb">float</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function combines two sorted lists of integers together into one sorted list and then finds</span>
-<span class="sd">    the median of the combined list.</span>
+<span class="sd">    This function combines two sorted lists of integers together into one</span>
+<span class="sd">    sorted list and then finds the median of the combined list.</span>
 
 <span class="sd">    :param nums1: The first sorted list of integers</span>
 <span class="sd">    :param nums2: The second sorted list of integers</span>
