--- a/python/katas/_modules/coderbyte/array_couples.html
+++ b/python/katas/_modules/coderbyte/array_couples.html
@@ -267,13 +267,15 @@
 <span class="sd">    string of the integer pairs that are incorrect is returned.</span>
 
 <span class="sd">    :param integers: The input list of integers, which must contain an even</span>
-<span class="sd">    number of elements :return: &quot;yes&quot; if all pairs have reversed pairs, or a</span>
-<span class="sd">    string containing the incorrect pairs</span>
+<span class="sd">        number of elements :return: &quot;yes&quot; if all pairs have reversed pairs, or</span>
+<span class="sd">        a string containing the incorrect pairs</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">if</span> <span class="nb">len</span><span class="p">(</span><span class="n">integers</span><span class="p">)</span> <span class="o">%</span> <span class="mi">2</span> <span class="o">!=</span> <span class="mi">0</span><span class="p">:</span>
         <span class="k">raise</span> <span class="ne">ValueError</span><span class="p">(</span><span class="s2">&quot;list must contain an even number of elements&quot;</span><span class="p">)</span>
+    <span class="c1"># fmt: off</span>
     <span class="n">int_arr</span> <span class="o">=</span> <span class="p">[(</span><span class="n">integers</span><span class="p">[</span><span class="n">idx</span> <span class="o">-</span> <span class="mi">1</span><span class="p">],</span> <span class="n">integers</span><span class="p">[</span><span class="n">idx</span><span class="p">])</span>
                <span class="k">for</span> <span class="n">idx</span> <span class="ow">in</span> <span class="nb">range</span><span class="p">(</span><span class="mi">1</span><span class="p">,</span> <span class="nb">len</span><span class="p">(</span><span class="n">integers</span><span class="p">),</span> <span class="mi">2</span><span class="p">)]</span>
+    <span class="c1"># fmt: on</span>
     <span class="n">index</span> <span class="o">=</span> <span class="mi">0</span>
     <span class="k">while</span> <span class="n">index</span> <span class="o">&lt;</span> <span class="nb">len</span><span class="p">(</span><span class="n">int_arr</span><span class="p">):</span>
         <span class="n">tup</span> <span class="o">=</span> <span class="n">int_arr</span><span class="p">[</span><span class="n">index</span><span class="p">]</span>
