--- a/python/katas/_modules/coderbyte/k_unique_characters.html
+++ b/python/katas/_modules/coderbyte/k_unique_characters.html
@@ -257,16 +257,20 @@
 <a class="viewcode-back" href="../../coderbyte.html#coderbyte.k_unique_characters.k_unique_characters">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">k_unique_characters</span><span class="p">(</span><span class="n">string</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function returns the longest substring that contains N unique characters, where N is the</span>
-<span class="sd">    number at position 0 in :attr:`string`.</span>
+<span class="sd">    This function returns the longest substring that contains N unique</span>
+<span class="sd">    characters, where N is the number at position 0 in :attr:`string`.</span>
 
-<span class="sd">    :param string: The input string that contains N at position 0 followed by characters</span>
-<span class="sd">    :return: The longest substring in :attr:`string` that contains N unique characters</span>
+<span class="sd">    :param string: The input string that contains N at position 0 followed by</span>
+<span class="sd">        characters</span>
+<span class="sd">    :return: The longest substring in :attr:`string` that contains N unique</span>
+<span class="sd">        characters</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="n">count</span> <span class="o">=</span> <span class="nb">int</span><span class="p">(</span><span class="n">string</span><span class="p">[</span><span class="mi">0</span><span class="p">])</span>
     <span class="n">characters</span> <span class="o">=</span> <span class="n">string</span><span class="p">[</span><span class="mi">1</span><span class="p">:]</span>
     <span class="n">words</span> <span class="o">=</span> <span class="p">[</span>
+        <span class="c1"># fmt: off</span>
         <span class="n">characters</span><span class="p">[</span><span class="n">idx</span><span class="p">:</span> <span class="n">idx</span> <span class="o">+</span> <span class="n">length</span><span class="p">]</span>
+        <span class="c1"># fmt: on</span>
         <span class="k">for</span> <span class="n">length</span> <span class="ow">in</span> <span class="nb">range</span><span class="p">(</span><span class="n">count</span><span class="p">,</span> <span class="nb">len</span><span class="p">(</span><span class="n">characters</span><span class="p">))</span>
         <span class="k">for</span> <span class="n">idx</span><span class="p">,</span> <span class="n">_</span> <span class="ow">in</span> <span class="nb">enumerate</span><span class="p">(</span><span class="n">characters</span><span class="p">)</span>
     <span class="p">]</span>
