--- a/python/katas/_modules/coderbyte/letter_count.html
+++ b/python/katas/_modules/coderbyte/letter_count.html
@@ -257,12 +257,12 @@
 <a class="viewcode-back" href="../../coderbyte.html#coderbyte.letter_count.letter_count">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">letter_count</span><span class="p">(</span><span class="n">string</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function returns the first word in :attr:`string` with the greatest number of repeated</span>
-<span class="sd">    letters.</span>
+<span class="sd">    This function returns the first word in :attr:`string` with the greatest</span>
+<span class="sd">    number of repeated letters.</span>
 
 <span class="sd">    :param string: The input string</span>
-<span class="sd">    :return: The word with the greatest number of repeated letters, or &quot;-1&quot; if there are no</span>
-<span class="sd">        repeated letters</span>
+<span class="sd">    :return: The word with the greatest number of repeated letters, or &quot;-1&quot; if</span>
+<span class="sd">        there are no repeated letters</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="n">word_with_highest_count</span> <span class="o">=</span> <span class="kc">None</span>
     <span class="n">highest_count</span> <span class="o">=</span> <span class="o">-</span><span class="mi">1</span>
