--- a/python/katas/_modules/coderbyte/pentagonal_number.html
+++ b/python/katas/_modules/coderbyte/pentagonal_number.html
@@ -257,8 +257,8 @@
 <a class="viewcode-back" href="../../coderbyte.html#coderbyte.pentagonal_number.pentagonal_number">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">pentagonal_number</span><span class="p">(</span><span class="n">integer</span><span class="p">:</span> <span class="nb">int</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">int</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function returns the number of dots that exist in a pentagonal shape with a center dot on</span>
-<span class="sd">    the :attr:`integer`-th iteration.</span>
+<span class="sd">    This function returns the number of dots that exist in a pentagonal shape</span>
+<span class="sd">    with a center dot on the :attr:`integer`-th iteration.</span>
 
 <span class="sd">    :param integer: The input integer that represents the N-th iteration</span>
 <span class="sd">    :return: The number of dots</span>
