--- a/python/katas/_modules/coderbyte/word_count.html
+++ b/python/katas/_modules/coderbyte/word_count.html
@@ -257,8 +257,8 @@
 <a class="viewcode-back" href="../../coderbyte.html#coderbyte.word_count.word_count">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">word_count</span><span class="p">(</span><span class="n">string</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">int</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function returns the number of words in :attr:`string`. Each word in the string is</span>
-<span class="sd">    separated by a space.</span>
+<span class="sd">    This function returns the number of words in :attr:`string`. Each word in</span>
+<span class="sd">    the string is separated by a space.</span>
 
 <span class="sd">    :param string: The input string</span>
 <span class="sd">    :return: The number of words in :attr:`string`</span>
