--- a/python/katas/_modules/codesignal/is_admissible_overpayment.html
+++ b/python/katas/_modules/codesignal/is_admissible_overpayment.html
@@ -259,14 +259,14 @@
     <span class="n">prices</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">int</span><span class="p">],</span> <span class="n">notes</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">str</span><span class="p">],</span> <span class="n">sensitivity</span><span class="p">:</span> <span class="nb">int</span>
 <span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">bool</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function determines whether a given customer will be willing to pay for the items in their</span>
-<span class="sd">    cart based on their price sensitivity.</span>
+<span class="sd">    This function determines whether a given customer will be willing to pay</span>
+<span class="sd">    for the items in their cart based on their price sensitivity.</span>
 
 <span class="sd">    :param prices: The input list of integers that represent prices for items</span>
 <span class="sd">    :param notes: The input list of strings that represent notes for each item</span>
 <span class="sd">    :param sensitivity: The customer&#39;s price sensitivity</span>
-<span class="sd">    :return: True if the calculation for the customer&#39;s price sensitivity is below</span>
-<span class="sd">        :attr:`sensitivity`, False otherwise</span>
+<span class="sd">    :return: True if the calculation for the customer&#39;s price sensitivity is</span>
+<span class="sd">        below :attr:`sensitivity`, False otherwise</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="n">total</span> <span class="o">=</span> <span class="mi">0</span>
     <span class="k">for</span> <span class="n">idx</span><span class="p">,</span> <span class="n">_</span> <span class="ow">in</span> <span class="nb">enumerate</span><span class="p">(</span><span class="n">prices</span><span class="p">):</span>
