--- a/python/katas/_modules/codewars/strip_url_params.html
+++ b/python/katas/_modules/codewars/strip_url_params.html
@@ -257,12 +257,14 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.strip_url_params.strip_url_params">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">strip_url_params</span><span class="p">(</span><span class="n">url</span><span class="p">:</span> <span class="nb">str</span><span class="p">,</span> <span class="n">params_to_strip</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">str</span><span class="p">]</span> <span class="o">=</span> <span class="kc">None</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function strips all duplicate query parameters from :attr:`str`, i.e. if the parameter &#39;a&#39;</span>
-<span class="sd">    appears twice in the URL, then the second &#39;a&#39; is ignored. Also, any parameters that appear in</span>
-<span class="sd">    :attr:`params_to_strip` will be removed from the URL entirely.</span>
+<span class="sd">    This function strips all duplicate query parameters from :attr:`str`, i.e.</span>
+<span class="sd">    if the parameter &#39;a&#39; appears twice in the URL, then the second &#39;a&#39; is</span>
+<span class="sd">    ignored. Also, any parameters that appear in :attr:`params_to_strip` will</span>
+<span class="sd">    be removed from the URL entirely.</span>
 
 <span class="sd">    :param url: The input string, the URL from which to strip query parameters</span>
-<span class="sd">    :param params_to_strip: The input list of strings of query parameters to remove from :attr:`url`</span>
+<span class="sd">    :param params_to_strip: The input list of strings of query parameters to</span>
+<span class="sd">        remove from :attr:`url`</span>
 <span class="sd">    :return: The URL with some, all, or no parameters stripped</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">if</span> <span class="s2">&quot;?&quot;</span> <span class="ow">not</span> <span class="ow">in</span> <span class="n">url</span><span class="p">:</span>
