--- a/python/katas/_modules/codewars/students_final_grade.html
+++ b/python/katas/_modules/codewars/students_final_grade.html
@@ -257,12 +257,14 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.students_final_grade.final_grade">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">final_grade</span><span class="p">(</span><span class="n">exam</span><span class="p">:</span> <span class="nb">int</span><span class="p">,</span> <span class="n">projects</span><span class="p">:</span> <span class="nb">int</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">int</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function calculates a student&#39;s final grade based on his or her exam score and the number</span>
-<span class="sd">    of projects that he or she completed.</span>
+<span class="sd">    This function calculates a student&#39;s final grade based on his or her exam</span>
+<span class="sd">    score and the number of projects that he or she completed.</span>
 
 <span class="sd">    :param exam: The input integer, the student&#39;s exam score</span>
-<span class="sd">    :param projects: The input integer, the number of projects that the student completed</span>
-<span class="sd">    :return: The student&#39;s final grade based on the exam score and number of projects completed</span>
+<span class="sd">    :param projects: The input integer, the number of projects that the student</span>
+<span class="sd">        completed</span>
+<span class="sd">    :return: The student&#39;s final grade based on the exam score and number of</span>
+<span class="sd">        projects completed</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">if</span> <span class="n">exam</span> <span class="o">&gt;</span> <span class="mi">90</span> <span class="ow">or</span> <span class="n">projects</span> <span class="o">&gt;</span> <span class="mi">10</span><span class="p">:</span>
         <span class="k">return</span> <span class="mi">100</span>
