--- a/python/katas/_modules/codewars/substring_fun.html
+++ b/python/katas/_modules/codewars/substring_fun.html
@@ -257,10 +257,11 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.substring_fun.nth_char">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">nth_char</span><span class="p">(</span><span class="n">words</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">str</span><span class="p">])</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function creates a string from the given list of strings. A letter from each string in the</span>
-<span class="sd">    list is used to create the string, and the index of a string in the list is used to extract</span>
-<span class="sd">    a letter from that string. For example, given [&quot;yoda&quot;, &quot;best&quot;, &quot;has&quot;], &quot;yes&quot; will be returned,</span>
-<span class="sd">    because words[0][0] + words[1][1] + words[2][2] = &quot;yes&quot;.</span>
+<span class="sd">    This function creates a string from the given list of strings. A letter</span>
+<span class="sd">    from each string in the list is used to create the string, and the index of</span>
+<span class="sd">    a string in the list is used to extract a letter from that string. For</span>
+<span class="sd">    example, given [&quot;yoda&quot;, &quot;best&quot;, &quot;has&quot;], &quot;yes&quot; will be returned, because</span>
+<span class="sd">    words[0][0] + words[1][1] + words[2][2] = &quot;yes&quot;.</span>
 
 <span class="sd">    :param words: The input list of strings</span>
 <span class="sd">    :return: A string created from one letter of each string in :attr:`words`</span>
