--- a/python/katas/_modules/codewars/thinkful_list_and_loop_drills_lists_of_lists.html
+++ b/python/katas/_modules/codewars/thinkful_list_and_loop_drills_lists_of_lists.html
@@ -259,11 +259,11 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.thinkful_list_and_loop_drills_lists_of_lists.process_data">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">process_data</span><span class="p">(</span><span class="n">data</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">list</span><span class="p">[</span><span class="nb">int</span><span class="p">]])</span> <span class="o">-&gt;</span> <span class="nb">int</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function subtracts the second element in each sublist of the given list from the first</span>
-<span class="sd">    element in the same sublist. After performing this operation on all sublists, all the</span>
-<span class="sd">    differences are multiplied together.</span>
+<span class="sd">    This function subtracts the second element in each sublist of the given</span>
+<span class="sd">    list from the first element in the same sublist. After performing this</span>
+<span class="sd">    operation on all sublists, all the differences are multiplied together.</span>
 
-<span class="sd">    :param data: The input list of list of integers</span>
+<span class="sd">    :param data: The input list, which contains lists of integers</span>
 <span class="sd">    :return: The product of all the differences multiplied together</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">return</span> <span class="n">reduce</span><span class="p">(</span><span class="k">lambda</span> <span class="n">fst</span><span class="p">,</span> <span class="n">snd</span><span class="p">:</span> <span class="n">fst</span> <span class="o">*</span> <span class="n">snd</span><span class="p">,</span> <span class="nb">map</span><span class="p">(</span><span class="k">lambda</span> <span class="n">lst</span><span class="p">:</span> <span class="n">lst</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span> <span class="o">-</span> <span class="n">lst</span><span class="p">[</span><span class="mi">1</span><span class="p">],</span> <span class="n">data</span><span class="p">))</span></div>
