--- a/python/katas/_modules/codewars/thinkful_string_drills_repeater_level_2.html
+++ b/python/katas/_modules/codewars/thinkful_string_drills_repeater_level_2.html
@@ -257,11 +257,13 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.thinkful_string_drills_repeater_level_2.repeater">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">repeater</span><span class="p">(</span><span class="n">string</span><span class="p">:</span> <span class="nb">str</span><span class="p">,</span> <span class="n">count</span><span class="p">:</span> <span class="nb">int</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function returns a string that contains the given string repeated :attr:`count` times.</span>
+<span class="sd">    This function returns a string that contains the given string repeated</span>
+<span class="sd">    :attr:`count` times.</span>
 
 <span class="sd">    :param string: The input string to repeat</span>
 <span class="sd">    :param count: The number of times to repeat the string</span>
-<span class="sd">    :return: A string that contains the input string repeated :attr:`count` times</span>
+<span class="sd">    :return: A string that contains the input string repeated :attr:`count`</span>
+<span class="sd">        times</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">return</span> <span class="sa">f</span><span class="s1">&#39;&quot;</span><span class="si">{</span><span class="n">string</span><span class="si">}</span><span class="s1">&quot; repeated </span><span class="si">{</span><span class="n">count</span><span class="si">}</span><span class="s1"> times is: &quot;</span><span class="si">{</span><span class="n">string</span><span class="w"> </span><span class="o">*</span><span class="w"> </span><span class="n">count</span><span class="si">}</span><span class="s1">&quot;&#39;</span></div>
 
