--- a/python/katas/_modules/leetcode/reverse_integer_7.html
+++ b/python/katas/_modules/leetcode/reverse_integer_7.html
@@ -257,16 +257,20 @@
 <a class="viewcode-back" href="../../leetcode.html#leetcode.reverse_integer_7.reverse">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">reverse</span><span class="p">(</span><span class="n">num</span><span class="p">:</span> <span class="nb">int</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">int</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function reverses all the digits in the given positive or negative integer. If the reversed</span>
-<span class="sd">    integer cannot fit into 32 bits, then zero is returned.</span>
+<span class="sd">    This function reverses all the digits in the given positive or negative</span>
+<span class="sd">    integer. If the reversed integer cannot fit into 32 bits, then zero is</span>
+<span class="sd">    returned.</span>
 
 <span class="sd">    :param num: The input integer</span>
-<span class="sd">    :return: The integer after all of its digits have been reversed, or zero if it cannot fit into</span>
-<span class="sd">        32 bits</span>
+<span class="sd">    :return: The integer after all of its digits have been reversed, or zero if</span>
+<span class="sd">        it cannot fit into 32 bits</span>
 <span class="sd">    &quot;&quot;&quot;</span>
-    <span class="n">x_str</span> <span class="o">=</span> <span class="s1">&#39;&#39;</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="nb">reversed</span><span class="p">(</span><span class="nb">str</span><span class="p">(</span><span class="n">num</span><span class="p">)[</span><span class="mi">1</span><span class="p">:]))</span> <span class="k">if</span> <span class="n">num</span> <span class="o">&lt;</span> <span class="mi">0</span> <span class="k">else</span> <span class="s1">&#39;&#39;</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="nb">reversed</span><span class="p">(</span><span class="nb">str</span><span class="p">(</span><span class="n">num</span><span class="p">)))</span>
-    <span class="n">reversed_x</span> <span class="o">=</span> <span class="nb">int</span><span class="p">(</span><span class="sa">f</span><span class="s1">&#39;-</span><span class="si">{</span><span class="n">x_str</span><span class="si">}</span><span class="s1">&#39;</span><span class="p">)</span> <span class="k">if</span> <span class="n">num</span> <span class="o">&lt;</span> <span class="mi">0</span> <span class="k">else</span> <span class="nb">int</span><span class="p">(</span><span class="sa">f</span><span class="s1">&#39;</span><span class="si">{</span><span class="n">x_str</span><span class="si">}</span><span class="s1">&#39;</span><span class="p">)</span>
-    <span class="k">return</span> <span class="n">reversed_x</span> <span class="k">if</span> <span class="o">-</span><span class="mi">2</span> <span class="o">**</span> <span class="mi">31</span> <span class="o">&lt;=</span> <span class="n">reversed_x</span> <span class="o">&lt;=</span> <span class="p">(</span><span class="mi">2</span> <span class="o">**</span> <span class="mi">31</span><span class="p">)</span> <span class="o">-</span> <span class="mi">1</span> <span class="k">else</span> <span class="mi">0</span></div>
+    <span class="c1"># fmt: off</span>
+    <span class="n">x_str</span> <span class="o">=</span> <span class="s2">&quot;&quot;</span><span class="o">.</span><span class="n">join</span><span class="p">(</span>
+        <span class="nb">reversed</span><span class="p">(</span><span class="nb">str</span><span class="p">(</span><span class="n">num</span><span class="p">)[</span><span class="mi">1</span><span class="p">:]))</span> <span class="k">if</span> <span class="n">num</span> <span class="o">&lt;</span> <span class="mi">0</span> <span class="k">else</span> <span class="s2">&quot;&quot;</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="nb">reversed</span><span class="p">(</span><span class="nb">str</span><span class="p">(</span><span class="n">num</span><span class="p">)))</span>
+    <span class="c1"># fmt: on</span>
+    <span class="n">reversed_x</span> <span class="o">=</span> <span class="nb">int</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;-</span><span class="si">{</span><span class="n">x_str</span><span class="si">}</span><span class="s2">&quot;</span><span class="p">)</span> <span class="k">if</span> <span class="n">num</span> <span class="o">&lt;</span> <span class="mi">0</span> <span class="k">else</span> <span class="nb">int</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;</span><span class="si">{</span><span class="n">x_str</span><span class="si">}</span><span class="s2">&quot;</span><span class="p">)</span>
+    <span class="k">return</span> <span class="n">reversed_x</span> <span class="k">if</span> <span class="o">-</span><span class="p">(</span><span class="mi">2</span><span class="o">**</span><span class="mi">31</span><span class="p">)</span> <span class="o">&lt;=</span> <span class="n">reversed_x</span> <span class="o">&lt;=</span> <span class="p">(</span><span class="mi">2</span><span class="o">**</span><span class="mi">31</span><span class="p">)</span> <span class="o">-</span> <span class="mi">1</span> <span class="k">else</span> <span class="mi">0</span></div>
 
 </pre></div>
         </article>
