--- a/python/katas/_modules/leetcode/strobogrammatic_number_246.html
+++ b/python/katas/_modules/leetcode/strobogrammatic_number_246.html
@@ -257,12 +257,14 @@
 <a class="viewcode-back" href="../../leetcode.html#leetcode.strobogrammatic_number_246.is_strobogrammatic">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">is_strobogrammatic</span><span class="p">(</span><span class="n">num</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">bool</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function tests whether the given number is strobogrammatic. A strobogrammatic number is a</span>
-<span class="sd">    number whose numeral is rotationally symmetric so that it appears the same when it is rotated</span>
-<span class="sd">    180 degrees. For example, 689 is a strobogrammatic number whereas 6, 120, and 1003 are not. If</span>
-<span class="sd">    the number contains 2, 3, 4, 5, or 7, it is not strobogrammatic. If a number contains one or</span>
-<span class="sd">    more 6&#39;s, the number must contain the same number of 9&#39;s. Also, 6 or 9 cannot be in the exact</span>
-<span class="sd">    middle of the number. For example, 169 is not a strobogrammatic number.</span>
+<span class="sd">    This function tests whether the given number is strobogrammatic. A</span>
+<span class="sd">    strobogrammatic number is a number whose numeral is rotationally symmetric</span>
+<span class="sd">    so that it appears the same when it is rotated 180 degrees. For example,</span>
+<span class="sd">    689 is a strobogrammatic number whereas 6, 120, and 1003 are not. If the</span>
+<span class="sd">    number contains 2, 3, 4, 5, or 7, it is not strobogrammatic. If a number</span>
+<span class="sd">    contains one or more 6&#39;s, the number must contain the same number of 9&#39;s.</span>
+<span class="sd">    Also, 6 or 9 cannot be in the exact middle of the number. For example, 169</span>
+<span class="sd">    is not a strobogrammatic number.</span>
 
 <span class="sd">    :param num: The input integer as a string</span>
 <span class="sd">    :return: True if the number is strobogrammatic, False otherwise</span>
@@ -275,7 +277,9 @@
         <span class="k">return</span> <span class="kc">False</span>
     <span class="n">middle</span> <span class="o">=</span> <span class="nb">len</span><span class="p">(</span><span class="n">num</span><span class="p">)</span> <span class="o">//</span> <span class="mi">2</span>
     <span class="n">left</span> <span class="o">=</span> <span class="n">num</span><span class="p">[:</span><span class="n">middle</span><span class="p">]</span>
+    <span class="c1"># fmt: off</span>
     <span class="n">right</span> <span class="o">=</span> <span class="n">num</span><span class="p">[</span><span class="n">middle</span><span class="p">:]</span> <span class="k">if</span> <span class="nb">len</span><span class="p">(</span><span class="n">num</span><span class="p">)</span> <span class="o">%</span> <span class="mi">2</span> <span class="o">==</span> <span class="mi">0</span> <span class="k">else</span> <span class="n">num</span><span class="p">[</span><span class="n">middle</span> <span class="o">+</span> <span class="mi">1</span><span class="p">:]</span>
+    <span class="c1"># fmt: on</span>
     <span class="k">if</span> <span class="nb">len</span><span class="p">(</span><span class="n">num</span><span class="p">)</span> <span class="o">%</span> <span class="mi">2</span> <span class="o">==</span> <span class="mi">1</span> <span class="ow">and</span> <span class="n">num</span><span class="p">[</span><span class="n">middle</span><span class="p">]</span> <span class="ow">in</span> <span class="s2">&quot;69&quot;</span><span class="p">:</span>
         <span class="k">return</span> <span class="kc">False</span>
     <span class="n">right</span> <span class="o">=</span> <span class="nb">list</span><span class="p">(</span><span class="nb">reversed</span><span class="p">(</span><span class="n">right</span><span class="p">))</span>
@@ -284,7 +288,7 @@
             <span class="n">right</span><span class="p">[</span><span class="n">idx</span><span class="p">]</span> <span class="o">=</span> <span class="s2">&quot;9&quot;</span>
         <span class="k">elif</span> <span class="n">number</span> <span class="o">==</span> <span class="s2">&quot;9&quot;</span><span class="p">:</span>
             <span class="n">right</span><span class="p">[</span><span class="n">idx</span><span class="p">]</span> <span class="o">=</span> <span class="s2">&quot;6&quot;</span>
-    <span class="k">return</span> <span class="n">left</span> <span class="o">==</span> <span class="s1">&#39;&#39;</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="n">right</span><span class="p">)</span></div>
+    <span class="k">return</span> <span class="n">left</span> <span class="o">==</span> <span class="s2">&quot;&quot;</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="n">right</span><span class="p">)</span></div>
 
 </pre></div>
         </article>
